--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 class="icon"
               >
               <h3>Experience</h3>
-              <p>2 years <br>Computer Science Major</p>
+              <p>3 years <br>Computer Science Major</p>
             </div>
             <div class="details-container">
               <img 
@@ -151,7 +151,7 @@
                 >
                 <div>
                   <h3>Python</h3>
-                  <p>1 year</p>
+                  <p>2 years</p>
                 </div>
               </article>
               <article>
@@ -165,7 +165,49 @@
                   <p>1 year</p>
                 </div>
               </article>
-              
+            </div>
+            <h2 class="experience-sub-title">Libraries & Tools</h2>
+            <div class="article-container">
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Pandas</h3>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Numpy</h3>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Seaborn</h3>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Jupyter</h3>
+                </div>
+              </article>
             </div>
           </div>
           <div class="details-container">
@@ -223,12 +265,13 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img 
-              src="./Assets/html-pic.jpg" 
+              src="./Assets/Olympic_rings_without_rims.png" 
               alt="Project 1"
               class="project-img"
               >   
             </div>
             <h2 class="experience-sub-title project-title">Project One</h2>
+            <p class="project-subtitle">Olympic Athlete Data Analysis</p>
             <div class="btn-container">
               <button 
                 class="btn btn-color-2 project-btn" 
@@ -236,25 +279,24 @@
               >
                 Github
               </button>
-              <!-- This is where the Live Demo Of Project would go
-              <button 
-                class="btn btn-color-2 project-btn" 
-                onclick="location.href='              '"
-              >
-                Finished Product
-              -->
+              
               </button>
             </div>
+            <p class="project-description">
+              Conducted exploratory data analysis on 100+ years of Olympic athlete data using Pandas, Seaborn, and Matplotlib. 
+              Identified trends in age, gender participation, and medal distribution across countries.
+            </p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img 
-              src="./Assets/java-image.jpg" 
+              src="./Assets/python-django.png" 
               alt="Project 2"
               class="project-img"
               >   
             </div>
             <h2 class="experience-sub-title project-title">Project Two</h2>
+            <p class="project-subtitle">CRM Web Application</p>
             <div class="btn-container">
               <button 
                 class="btn btn-color-2 project-btn" 
@@ -271,6 +313,10 @@
               -->
               </button>
             </div>
+            <p class="project-description">
+              Built a full-stack CRM app with Django and MySQL, featuring user authentication, customer record management, 
+              and role-based access control to ensure secure CRUD operations.
+            </p>
           </div>
         </div>
       </div>
