--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@
             </div>
           </div>
           <div class="text-container">
-            <p>My name is Dylan Ostolaza and I am currently pursuing a Bachelors of Science in Computer Science 
-               at the Florida Institute of Technology. I am experienced in Java, Python, and C++, accompanied with
-               strong problem-solving and time-managment abilities developed from academic and athletic commitments.
-               As a former Division I swimmer now competing on the Division II level, I learned leadership, discipline,
-               and teamwork. I am also a brother of the Pi Kappa Phi fraternity where I contributed to recruitment,
-               alumni engagment, and philanthropy. I have work experience as a caddie, swim instructor, and head coach,
-               where I learned excellent communication and constumer service skills. 
-
+            <p>
+               My name is Dylan Ostolaza and I am currently pursuing a Bachelors of Science in Computer Science 
+               with a minor in Computational Mathematics at the Florida Institute of Technology. I have hands-on experience 
+               with Python and Java, along with strong problem-solving and time management skills developed through both 
+               academic and athletic commitments. As a former Division I swimmer now competing on the Division II level, I learned 
+               leadership, discipline, and teamwork. I am passionate about growing as a software engineer and data scientist, and I'm 
+               always eager to learn new technologies, explore AI, and build solutions that solve real-world problems.
             </p>
           </div>
         </div>
@@ -265,7 +264,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img 
-              src="./Assets/Olympic_rings_without_rims.png" 
+              src="./Assets/Olympic_rings_without_rims-resize.png" 
               alt="Project 1"
               class="project-img"
               >   
