--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Dylan Ostolaza - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="icon" type="image/png" href="./Assets/favicon1.png">
   </head>
   <body>
     <nav id="desktop-nav">
@@ -91,8 +92,8 @@
                 alt="Experience icon" 
                 class="icon"
               >
-              <h3>Experience</h3>
-              <p>3 years <br>Computer Science Major</p>
+              <h3>Interests</h3>
+              <p>AI<br>Machine Learning<br>Data Science<br>Software Engineering</p>
             </div>
             <div class="details-container">
               <img 
@@ -101,13 +102,14 @@
                 class="icon"
               >
               <h3>Education</h3>
-              <p>New Jersey Institute of Technology <br> 2022-2024 <br>Florida Institute of Technology <br> 2024-2026</p>
+              <p>New Jersey Institute of Technology <br> 2022-2024 <br>Florida Institute of Technology <br> 2024-2027</p>
             </div>
           </div>
           <div class="text-container">
             <p>
                My name is Dylan Ostolaza and I am currently pursuing a Bachelors of Science in Computer Science 
-               with a minor in Computational Mathematics at the Florida Institute of Technology. I have hands-on experience 
+               with a minor in Computational Mathematics at the Florida Institute of Technology. In my free time, I enjoy 
+               fishing as a way to relax, recharge, and stay connected with the outside world. I have hands-on experience 
                with Python and Java, along with strong problem-solving and time management skills developed through both 
                academic and athletic commitments. As a former Division I swimmer now competing on the Division II level, I learned 
                leadership, discipline, and teamwork. I am passionate about growing as a software engineer and data scientist, and I'm 
@@ -184,7 +186,7 @@
                   class="icon"
                 >
                 <div>
-                  <h3>Numpy</h3>
+                  <h3>Seaborn</h3>
                 </div>
               </article>
               <article>
@@ -194,7 +196,7 @@
                   class="icon"
                 >
                 <div>
-                  <h3>Seaborn</h3>
+                  <h3>Matplotlib</h3>
                 </div>
               </article>
               <article>
@@ -220,18 +222,7 @@
                 >
                 <div>
                   <h3>Pi Kappa Phi Fraternity</h3>
-                  <p>Treasury Board <br>Rush Board</p>
-                </div>
-              </article>
-              <article>
-                <img 
-                  src="./Assets/checkmark.png" 
-                  alt="Experience icon"
-                  class="icon"
-                >
-                <div>
-                  <h3>The Ability Experience</h3>
-                  <p>Fraternity Philanthropy</p>
+                  <p>Treasury & Rush Board</p>
                 </div>
               </article>
               <article>
@@ -242,10 +233,42 @@
                 >
                 <div>
                   <h3>Division I Swimming</h3>
-                  <p>School Record Holder <br>20 Hours/ Week</p>
+                  <p>School Record Holder</p>
                 </div>
               </article>
             </div>
+            <h2 class="experience-sub-title">Work Experience</h2>
+            <div class="article-container">
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Swim Instructor</h3>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Caddie</h3>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./Assets/checkmark.png" 
+                  alt="Experience icon"
+                  class="icon"
+                >
+                <div>
+                  <h3>Swim Coach</h3>
+                </div>
+              </article>
           </div>
         </div>
       </div>
@@ -274,7 +297,7 @@
             <div class="btn-container">
               <button 
                 class="btn btn-color-2 project-btn" 
-                onclick="location.href='https://github.com/swimdude'"
+                onclick="location.href='https://github.com/swimdude/olympic_analysis'"
               >
                 Github
               </button>
@@ -299,17 +322,11 @@
             <div class="btn-container">
               <button 
                 class="btn btn-color-2 project-btn" 
-                onclick="location.href='https://github.com/swimdude'"
+                onclick="location.href='https://github.com/swimdude/djangocrm'"
               >
-                GitHub
+                Github
               </button>
-              <!-- This is where the Live Demo Of Project would go
-              <button 
-                class="btn btn-color-2 project-btn" 
-                onclick="location.href='              '"
-              >
-                Finished Product
-              -->
+              
               </button>
             </div>
             <p class="project-description">
