Resume and minor changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button 
             class="btn btn-color-2" 
-            onclick="window.open('./Assets/Dylan_Ostolaza_Resume_Projects.pdf')"
+            onclick="window.open('./Assets/Dylan_Ostolaza_Resume.pdf')"
             >
             Download Resume
           </button>
@@ -221,8 +221,8 @@
                   class="icon"
                 >
                 <div>
-                  <h3>Pi Kappa Phi Fraternity</h3>
-                  <p>Treasury & Rush Board</p>
+                  <h3>Computing Honors Society (UPE)</h3>
+                  <p>President</p>
                 </div>
               </article>
               <article>
