--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                   class="icon"
                 >
                 <div>
-                  <h3>Computing Honors Society (UPE)</h3>
+                  <h3>Computing Honors Society</h3>
                   <p>President</p>
                 </div>
               </article>
