--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button 
             class="btn btn-color-2" 
-            onclick="window.open('./Assets/Dylan_Ostolaza_Resume.pdf')"
+            onclick="window.open('./Assets/Resume.pdf')"
             >
             Download Resume
           </button>
